# route/routes.go
@@ -1,6 +1,8 @@
 package route
 
 import (
+	"github.com/gin-contrib/sessions"
+	"github.com/gin-contrib/sessions/cookie"
 	"github.com/gin-gonic/gin"
 	"goAdmin/controller"
 	"goAdmin/middleware"
@@ -10,6 +12,11 @@ import (
 func CollectRouter(r *gin.Engine) *gin.Engine{
 	// 静态资源文件
 	r.StaticFS("/static",http.Dir("uploadFiles"))
+
+	// 声明
+	// "session":业务session名
+	store := cookie.NewStore([]byte("secret"))
+	r.Use(sessions.Sessions("session", store))
 
 	r.Use(middleware.CorsMiddleware(),middleware.RecoveryMiddleware(),middleware.IPAuthMiddleWare()) // 使用跨域中间件 和 cover()及ip白名单 中间件
 	v1 := r.Group("/api/v1")
@@ -31,6 +38,7 @@ func CollectRouter(r *gin.Engine) *gin.Engine{
 		v1.PUT("/books/:id",controller.BookUpdate)
 		v1.DELETE("/books/:id",controller.BookDelete)
 
+		v1.GET("/getCode",controller.GenerateCaptchaHandler)
 		v1.POST("/upload",controller.UploadFile)
 	}
 
